erDiagram
    %% Reference Data Tables
    species {
        UUID id PK
        VARCHAR_50 code UK
        VARCHAR_100 name_ru
        VARCHAR_100 name_en
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    breeds {
        UUID id PK
        UUID species_id FK
        VARCHAR_50 code
        VARCHAR_100 name_ru
        VARCHAR_100 name_en
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        %% UK (species_id, code)
    }
    cities {
        UUID id PK
        VARCHAR_100 name_ru
        VARCHAR_100 name_en
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    supported_languages {
        CHAR_2 code PK
        JSONB name_localized
        BOOLEAN is_active
        INTEGER display_order
        TIMESTAMPTZ created_at
    }

    %% Identity Domain
    users {
        UUID id PK
        VARCHAR_60 phone_hash
        VARCHAR_255 oauth_google_id
        VARCHAR_255 oauth_apple_id
        VARCHAR_255 oauth_telegram_id
        VARCHAR_255 oauth_vk_id
        VARCHAR_100 full_name
        UUID city_id FK
        TEXT avatar_url
        VARCHAR_255 email
        BOOLEAN email_verified
        VARCHAR_60 password_hash
        VARCHAR_20 role
        BOOLEAN is_active
        TIMESTAMPTZ last_login_at
        TIMESTAMPTZ deactivated_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    %% Animal Domain
    animals {
        UUID id PK
        UUID owner_id FK
        UUID organization_id FK
        UUID species_id FK
        UUID breed_id FK
        JSONB breed_text_localized
        JSONB nickname_localized
        VARCHAR_10 sex
        DATE date_of_birth
        VARCHAR_100 color_coat
        VARCHAR_50 microchip_id
        VARCHAR_50 tattoo_brand_id
        BOOLEAN is_active
        JSONB health_records
        JSONB reproductive_data
        DATE owned_since
        UUID mother_id FK
        UUID father_id FK
        JSONB description_localized
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deactivated_at
    }
    animal_ownership_history {
        UUID id PK
        UUID animal_id FK
        UUID owner_id FK
        DATE start_date
        DATE end_date
        TEXT transfer_reason
        TIMESTAMPTZ created_at
    }

    %% Organization Domain
    organizations {
        UUID id PK
        VARCHAR_20 inn
        VARCHAR_20 kpp
        TEXT address
        VARCHAR_30 phone
        VARCHAR_255 email
        TEXT logo_url
        JSONB name_localized
        JSONB description_localized
        JSONB metadata
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    branches {
        UUID id PK
        UUID organization_id FK
        UUID city_id FK
        TEXT address
        VARCHAR_30 phone
        VARCHAR_255 email
        JSONB name_localized
        JSONB description_localized
        BOOLEAN is_headquarters
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    organization_users {
        UUID id PK
        UUID organization_id FK
        UUID user_id FK
        VARCHAR_20 role_in_org
        BOOLEAN is_primary
        DATE joined_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    %% Marketplace/Listings Domain
    listings {
        UUID id PK
        UUID animal_id FK
        UUID seller_id FK
        UUID organization_id FK
        UUID branch_id FK
        VARCHAR_20 listing_type
        JSONB title_localized
        JSONB description_localized
        INTEGER price_cents
        CHAR_3 currency
        INTEGER quantity
        GEOGRAPHY location_point
        INTEGER search_radius_m
        BOOLEAN is_active
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    listing_photos {
        UUID id PK
        UUID listing_id FK
        TEXT url
        INTEGER order_index
        TIMESTAMPTZ created_at
    }
    conversations {
        UUID id PK
        UUID listing_id FK
        UUID participant_a_id FK
        UUID participant_b_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    messages {
        UUID id PK
        UUID conversation_id FK
        UUID sender_id FK
        UUID recipient_id FK
        TEXT body
        TIMESTAMPTZ sent_at
        TIMESTAMPTZ read_at
        TIMESTAMPTZ created_at
    }

    %% Extensibility / System Tables
    feature_toggles {
        VARCHAR_100 key PK
        TEXT description
        BOOLEAN is_enabled
        INTEGER rollout_percentage
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    outbox_events {
        UUID id PK
        VARCHAR_50 aggregate_type
        UUID aggregate_id
        VARCHAR_100 event_type
        JSONB payload
        TIMESTAMPTZ processed_at
        TIMESTAMPTZ created_at
    }

    %% Relationships
    species ||..o{ breeds : "contains"
    species ||..o{ animals : "classified as"
    breeds ||..o{ animals : "breed of"
    users }o..|| cities : "located in (optional)"
    users ||..o{ animals : "owns"
    users ||..o{ animal_ownership_history : "records ownership"
    users ||..o{ listings : "sells"
    users ||..o{ conversations : "participates as initiator"
    users ||..o{ conversations : "participates as recipient"
    users ||..o{ messages : "sends"
    users ||..o{ messages : "receives"
    animals ||..o{ animal_ownership_history : "has history"
    animals ||..o{ listings : "listed for"
    animals }o..|| animals : "mother of"
    animals }o..|| animals : "father of"
    listings ||..o{ listing_photos : "has photos"
    listings ||..o{ conversations : "has conversation"
    conversations ||..o{ messages : "contains"

    %% Organization Domain Relationships
    organizations }o..o{ organization_users : "contains"
    users }o..o{ organization_users : "belongs to"
    organizations }o..o{ branches : "has"
    branches }o..|| cities : "located in"
    listings }o..|| organizations : "linked to (optional)"
    listings }o..|| branches : "linked to (optional)"
    animals }o..|| organizations : "owned by (optional)"
    animals }o..|| branches : "kept at (optional)"